test/cases/bad/bad054.lat
// Not lvalue

int main() {
    string s = "str";
    s[0] = "2";
    return 0;
}
